# buddy

./: .gitignore  BUILDSPEC-WEEK1.md  BUILDSPEC-WEEK2.md  BUILDSPEC-WEEK3.md  BUILDSPEC-WEEK4.md  CLAUDE.md  README.md  plan.md  scenario-c.md  week1.md  week2.md  week3.md
scripts/: install-piper.sh  install-whisper.sh
server/: .env.example  bot.py  config.py  pyproject.toml  stt_whisper.py  tts_piper.py
